--- a/resources/css/styleslayout.css
+++ b/resources/css/styleslayout.css
@@ -1262,10 +1262,11 @@ textarea:focus {
 
 #contenido main {
     width: 100%;
-    padding: 36px 24px;
+    padding: 0px 24px;
     max-height: calc(100vh - 56px);
     overflow-y: auto;
     height: 100vh;
+    margin-top: -10px;
 }
 
 #contenido main .head-title {
