--- a/resources/css/stylesmodal.css
+++ b/resources/css/stylesmodal.css
@@ -66,6 +66,7 @@ body.dark {
     height: 475px;
     background: #2B4D6D;
     padding: 1em 2em;
+    overflow: scroll;
 }
 
 /* separador */
@@ -115,6 +116,7 @@ body.dark {
     background: var(--color-azulclaro);
     padding: 1em 2em;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    overflow: scroll;
 }
 
 .modal__content3 {
@@ -125,6 +127,7 @@ body.dark {
     background: #2B4D6D;
     padding: 1em 2em;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    overflow: scroll;
 }
 
 .modal__content4 {
@@ -135,6 +138,7 @@ body.dark {
     background: #2B4D6D;
     padding: 1em 2em;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    overflow: scroll;
 }
 
 .modal__close1 {
@@ -154,6 +158,7 @@ body.dark {
     background: #2B4D6D;
     padding: 1em 2em;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    overflow: scroll;
 }
 
 .modal__content6 {
@@ -164,6 +169,7 @@ body.dark {
     background: var(--color-azulclaro);
     padding: 1em 2em;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    overflow: scroll;
 }
 
 .modal__content7 {
@@ -173,6 +179,7 @@ body.dark {
     height: 350px;
     background: #2B4D6D;
     padding: 1em 2em;
+    overflow: scroll;
 }
 
 .modal__content8 {
@@ -182,6 +189,7 @@ body.dark {
     height: 350px;
     background: #2B4D6D;
     padding: 1em 2em;
+    overflow: scroll;
 }
 
 .modal__close2 {
